--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@ connection.php
 upload/*
 page.pdf
 
-/readme.html
-/license.txt
-
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
